[gd_scene load_steps=5 format=3 uid="uid://game_over_scene"]

[ext_resource type="Script" uid="uid://game_over_script" path="res://scripts/game_over_screen.gd" id="1_script"]
[ext_resource type="Script" path="res://scripts/bouncy_button.gd" id="1_bouncy"]
[ext_resource type="Theme" uid="uid://b8q7x6y504w3" path="res://resources/main_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" path="res://assets/ui/star.svg" id="3_star"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(1, 1, 1, 0.95)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_left = 40
corner_radius_bottom_right = 40
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 30
shadow_offset = Vector2(0, 15)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.11, 0.64, 0.93, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_left = 20
corner_radius_bottom_right = 20
shadow_color = Color(0, 0.4, 0.6, 1)
shadow_size = 0
shadow_offset = Vector2(0, 6)


[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.9, 0.9, 0.9, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.345098, 0.8, 0.00784314, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -350.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 350)
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
text = "VICTORY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 180.0
offset_bottom = 280.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Star1" type="TextureRect" parent="Panel/StarContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
pivot_offset = Vector2(50, 50)
texture = ExtResource("3_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="Panel/StarContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
pivot_offset = Vector2(60, 60)
texture = ExtResource("3_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="Panel/StarContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
pivot_offset = Vector2(50, 50)
texture = ExtResource("3_star")
expand_mode = 1
stretch_mode = 5

[node name="RewardLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 320.0
offset_bottom = 380.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 42
text = "+50 COINS"
horizontal_alignment = 1

[node name="HBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -280.0
offset_right = -60.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15
alignment = 1

[node name="NextLevel" type="Button" parent="Panel/HBox"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "NEXT LEVEL"
script = ExtResource("1_bouncy")

[node name="Restart" type="Button" parent="Panel/HBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "PLAY AGAIN"
flat = true
script = ExtResource("1_bouncy")

[node name="Menu" type="Button" parent="Panel/HBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "RETURN TO MAP"
flat = true
script = ExtResource("1_bouncy")

[node name="Confetti" parent="." instance=ExtResource("1_confetti")]
position = Vector2(360, 200)

[connection signal="pressed" from="Panel/HBox/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="Panel/HBox/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/HBox/Menu" to="." method="_on_menu_pressed"]

[connection signal="pressed" from="Panel/HBox/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="Panel/HBox/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/HBox/Menu" to="." method="_on_menu_pressed"]
